scripts/kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: greenv2.eu-gb.containers.appdomain.cloud #find by running ibmcloud cs cluster-get <cluster name>
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-stg
          servicePort: 80
  - host: www.greenv2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-stg
          servicePort: 80
